--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,13 @@
 
 }
 
+.sanFont{
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+
 .smallText {
   font-family: "Source Sans 3", sans-serif;
   font-optical-sizing: auto;
@@ -238,4 +245,5 @@ h3 {
   text-align: center;
 
 }
+
 
